--- a/Facebook/fb-with-jquey.html
+++ b/Facebook/fb-with-jquey.html
@@ -3,13 +3,14 @@
 <head>
 	<title>Facebook-Log In</title>
 	<link rel="stylesheet" type="text/css" href="fb.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="jquery-val.js" type="text/javascript"></script>
 </head>
 <body class="grad">
 <div class="divLog">
         <div class="divFb" >facebook</div>
 		<div class="divLogIn"  >
-			<form name="login" onsubmit="logInValidation()" method="post">
+			<form name="login" method="post">
 				<input type="text" id="username" placeholder="User Name">
 				<input type="pasword" id="password" placeholder="Password">
 				<input class="btn-Login" type="submit" id="btnLogin" value="Log In">
@@ -29,10 +30,10 @@
 				<input  type="text" placeholder="Last Name" id="lastname"><br><br>
 				<input size="45" type="text" id="MobNumber" placeholder="Mobile Number"><br><br>
 				<input size="45" type="email" id="email" placeholder="Email"><br><br>
-				<input size="45" type="date" id="dob" placeholder="Date of Birth"><br><br>
+				<input size="100" type="date" id="dob" placeholder="Date of Birth"><br><br>
 				<input size="45" type="password" id="Password" placeholder="Password"><br><br>
 				<p><font face="Arial" size="1" color="grey">By clicking Sign Up, You agree to our terms and that you have read our Data Use Policy,<br>Including our Cookie Use </font> </p>
-				<img width="100" src="images/SignUp.jpg" onclick="signUpValidation()">
+				<img width="100" src="images/SignUp.jpg" id="SignUpImg">
 			</form>
 	</div>
 </div>
