--- a/Facebook/fbBootstrap.html
+++ b/Facebook/fbBootstrap.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<title>Facebook-Log In or Sign Up</title>
+
 	<link rel="stylesheet" type="text/css" href="fbBootstrap.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
+
 </head>
 <body class="grad">
 	<div class="container-fluid">
@@ -13,17 +15,17 @@
 			<div class="divLog">
 
 				<div class="col-md-2 col-md-offset-1 col-lg-2 col-lg-offset-1 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3 divFb">facebook</div>
-				<div class="col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 col-sm-6 col-sm-offset-3 col-xs-6 col-xs-offset-3 divLogIn">
+				<div class="col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 divLogIn">
 		    		<form name="login">
 		    			<div class="row">
-		    				<div class="col-md-4 col-lg-4 col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3">
-								<input type="text" name="username" placeholder="User Name">
+		    				<div class="col-md-4 col-lg-4 col-xs-12  col-sm-12">
+		    					<input class="form-control" type="text" name="username" placeholder="User Name">
 							</div>
-							<div class="col-md-4 col-lg-4 col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3">
-								<input type="pasword" name="password" placeholder="Password">
+							<div class="col-md-4 col-lg-4 col-xs-12  col-sm-12">
+								<input class="form-control" type="pasword" name="password" placeholder="Password">
 							</div>
-							<div class="col-md-4 col-lg-4 col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3">
-								<input class="btn-Login btn-xs" type="submit" name="btnLogin" value="Log In">
+							<div class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
+								<input class="btn-Login btn-xs btn-md " type="submit" name="btnLogin" value="Log In">
 							</div>
 						</div>
 					</form>
@@ -39,9 +41,9 @@
 	        </div>
 			
 		</div>
-		<div class="col-md-6 col-lg-6"  >
+		<div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 divSignUp"  >
 			<div class="container-fluid">
-				<h1 >Sign Up</font></h1><br>
+				<h1 class="hidden-xs hidden-sm" >Sign Up</font></h1><br>
 				<form name="SignUp">
 					<div class="row form-inline hidden-xs hidden-sm">
 						<div class="col-md-4">
@@ -58,7 +60,7 @@
 					</div>
 					<div class="row hidden-xs hidden-sm">
 						<div class="col-md-8">
-							<input class="form-control " type="text" name="Email" placeholder="Email"><br>
+							<input class="form-control " type="Email" name="Email" placeholder="Email"><br>
 						</div>
 					</div>
 					<div class="row hidden-xs hidden-sm">
@@ -72,8 +74,8 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-12 col-sm-6 col-sm-offset-3"></div>
-							<button type="button" class="btn btn-success">Sign Up Now !</button>
+						<div class="col-md-10 col-lg-10 col-sm-12 col-xs-12"></div>
+							<button type="button" class="btn btn-success centered">Sign Up Now !</button>
 						</div>
 					</div>
 				</form>
