--- a/Facebook/index.html
+++ b/Facebook/index.html
@@ -18,21 +18,21 @@
 					<div class="container-fluid">
 						<div class="row">
 							<div class="col-md-3 col-xs-12 divFb">facebook</div>
-							<div class="col-md-7 col-md-offset-2 divLogIn col-xs-12 sm-textboxes">
+							<div  class="col-md-7 col-md-offset-2 divLogIn col-xs-12 sm-txt-low">
 				    			<form name="login">
 				    				<div class="row">
 				    					<div class="col-md-4 col-md-offset-1 col-xs-12">
 				    						<label class="hidden-xs hidden-sm">Email or Phone</label>
-				    						<input class="form-control" type="text" id="username">
+				    						<input class="form-control" type="text"  id="username">
 										</div>
 										<div class="col-md-4 col-xs-12">
 											<label class="hidden-xs hidden-sm">Password</label>
 											<input class="form-control" type="pasword" id="password">
-											<a href="#">Forgotten account?</a>
+											<a class="hidden-xs hidden-sm" href="#">Forgotten account?</a>
 										</div>
 										<div class="col-md-2  col-xs-12">
-											<input class="btn btn-xs btn-Login" type="button" name="btnLogin" value="Log In">
-
+											<button class="btn btn-Login" name="btnLogin" >Log In
+											</button>
 										</div>
 									</div>
 								</form>
@@ -124,8 +124,8 @@
 								</div>
 							</div>
 							<div class="row">
-								<div class="col-md-10 col-lg-10 col-sm-12 col-xs-12">
-									<button style="font-size: 20px; font-weight: bold;" type="button" class="btn btn-success">Create an account</button>
+								<div class="col-md-10 col-lg-10 col-sm-12 col-xs-12 div-signup">
+									<button id="btn-signup" type="button" class="btn btn-success">Create an account</button>
 								</div>
 							</div>
 						</form>
